                         - OVMS task naming cleanup
                         - Refactor housekeeping/events tasks to use Events task for signal
                           dispatch and housekeeping
                         - Run SD CARD automount in Events task context, not Timer
                         - Boot: store & send crash debug info (*-OVM-DebugCrash records)

2018-04-07 MWJ  3.1.003  OTA release
                         - Production build configurations

2018-04-07 MWJ  3.1.002  OTA release
                         - Nissan Leaf: Various enhancements:
                           Store hx in a metric, SoH in soh based on configurable new car Ah
                           Adjust constants
                           Store gids in a metric
                           Make range calcuations configurable
                           Calculate range in km
                           Decode odometer and odometer units
                         - SSH: Increase scp size limit to 10MB
                         - Console: Show usage line if non-empty with optional subcommands
                         - Module: Add quick-and-dirty optional module task stack listing
                         - SIMCOM: Add ppp shutdown msg, on response from the ppp task
                         - Housekeeping: Move ticker.* events to housekeeping task context
                         - SIMCOM: Fix to ppp disconnect handler, to reconnect in LWIP tiT task context
                         - Twizy v0.14: battery cell monitoring web UI
                         - Webserver: dashboard
                         - Web UI: fullscreen mode

2018-03-25 MWJ  3.1.001  OTA release
                         - Add task state to 'module tasks' output
                         - Avoid SPIRAM being lumped in with DRAM in 'module memory' output
                         - Wifi: Make 'wifi scan' command block, and show nice summary of
                           discovered access points